bug-5 fixed input field overflow in 500px<

--- a/components/Dashboard/MemberTree/index.module.css
+++ b/components/Dashboard/MemberTree/index.module.css
@@ -494,3 +494,9 @@
 
 @media (max-width: 1200px) {
 }
+
+@media screen and (max-width: 500px) {
+  .searchDiv {
+    flex-direction: column;
+  }
+}
